# rss-reader

./: CLAUDE.md  CONVERSATION-2026-01-14-b.md  CONVERSATION-2026-01-14.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  blocklist.rs  config.rs  lib.rs  main.rs
src/ai/: summarizer.rs
src/db/: repository.rs
src/feed/: fetcher.rs  opml.rs
src/models/: article.rs  mod.rs
src/services/: content_fetcher.rs
src/tui/: handler.rs  ui.rs
